--- a/views/thank-you.handlebars
+++ b/views/thank-you.handlebars
@@ -239,6 +239,26 @@
     });*/ 
 
 
+
+//---------------quesContent
+/*const Params = {
+        "qid":4
+       
+    };
+    fetch('/api/quesContent',{
+        method: 'post',
+        body: JSON.stringify(Params),
+        headers: {
+            'Accept': 'application/json',
+            'Content-Type': 'application/json',
+        },
+    }).then(res => res.json())
+        .then(res =>{
+        console.log(res.data);
+    });
+    */
+    
+
 //-----------------analysis----------
 /*const Params = {
         "qid":2
