--- a/views/thank-you.handlebars
+++ b/views/thank-you.handlebars
@@ -216,7 +216,7 @@
         },
     }).then(res => res.json())
         .then(res =>{
-        console.log(res.data.data);
+        console.log(res.data);
     });*/
 
 
